--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -17,5 +17,5 @@ spring:
 
 # 自定义配置
 app:
-  upload-path: D:\data\files\water-map-files\
-  allowed-origins: http://localhost,http://127.0.0.1,http://113.45.143.70:18080,http://localhost:5173,http://localhost:8080,http://127.0.0.1:8080,http://127.0.0.1:5173
+  upload-path: /data/water-map-files/
+  allowed-origins: http://localhost:5173,http://localhost:8080,http://127.0.0.1:5173
